--- a/GitTest/src/main/webapp/Ex01.html
+++ b/GitTest/src/main/webapp/Ex01.html
@@ -7,6 +7,9 @@
 <body>
 	<h1>첫번째 커밋!</h1>
 	<h1>두번째 커밋!</h1>
+	<h1>세번째 커밋!</h1>
+	<h1>네번째 커밋!</h1>
+	<h1>다섯번째 커밋!</h1>
 	<!--  다섯번째 커밋이라는 내용까지 commit, push 작업을 사용해보세요!-->
 </body>
 </html>
